Remove console.logs, fix number overflow and add info to README

--- a/styles.css
+++ b/styles.css
@@ -51,10 +51,11 @@ body {
 
 .calculator__display {
     grid-area: display;
-    font-size: 3rem;
     padding: 1rem;
     text-align: right;
     color: white;
+    font-size: 3rem;
+    word-break: break-all;
     background-color: hsl(267, 100%, 40%); 
     border-radius: 10px;
 }
